--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 keywords = ["opencl", "gpu", "gpgpu"]
 license = "MIT"
 exclude = ["target/*", "*.png", "bak/*"]
+build = "build.rs"
 
 [features]
 kernel_debug_print = []
